<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_info_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/title_info"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:textSize="23sp"
        android:textStyle="bold"/>

       <TextView
        android:id="@+id/tv_info_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/info_description"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
       />

    <Button
        android:id="@+id/btn_delete_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/green_clear"
        tools:text="@string/delete"
        android:textColor="@color/dark"/>


</LinearLayout>
