<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_dialog_dialer"
        app:tint="@color/green"
        />

    <TextView
        android:id="@+id/tv_title_expenses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insert_expenses"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/category_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="@+id/edt_expenses_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_expenses" />


    <EditText
        android:id="@+id/edt_expenses_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="Ex: 257.70"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_list" />



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_delete_or_update_expenses"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/green_clear"
        android:text="@string/delete"
        android:textColor="@color/dark"
        app:layout_constraintEnd_toStartOf="@+id/vertical_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_expenses_number" />


    <Button
        android:id="@+id/btn_create_or_update_expenses"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/green_clear"
        android:text="@string/add_btn"
        android:textColor="@color/dark"
        app:layout_constraintEnd_toEndOf="@+id/edt_expenses_number"
        app:layout_constraintStart_toEndOf="@+id/btn_delete_or_update_expenses"
        app:layout_constraintTop_toBottomOf="@+id/edt_expenses_number" />


</androidx.constraintlayout.widget.ConstraintLayout>